change Standard to Pay-As-You-Go

--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -24,7 +24,7 @@ Find the recent changes to the new platform on the [Latest updates page,](/docs/
 
 ## When should I make the transition?
 
-Open and Pay-as-you-go Standard Plan users are encouraged to create an account and start using the new platform as soon as possible.
+Open and Pay-As-You-Go Plan users are encouraged to create an account and start using the new platform as soon as possible.
 
 Premium Plan, On-Prem Plan, and Startup Program users should not create a new account yet and should wait to receive migration guidance from their administrators in the coming weeks.
 
@@ -54,7 +54,7 @@ You can see the instances you have access to on the dashboard or by clicking the
 The following plans are available to non-Premium users:
 
 * **Open** - Free plan with 10 minutes of access to quantum computers per 28-day period.
-* **Standard** - Pay only for your actual [usage](/docs/guides/estimate-job-run-time).
+* **Pay-As-You-Go** - Pay only for your actual [usage](/docs/guides/estimate-job-run-time).
 
 <Admonition>
 The Lite Plan is deprecated and will be removed on 14 March 2025.
@@ -190,7 +190,7 @@ This transition enhances security, scalability, and user experience while keepin
 
 ### Steps to migrate
 
-* If you currently use the Standard Plan, you don't have to do anything.  You'll just use the new [IBM Quantum Platform](https://quantum.cloud.ibm.com/) interface.
+* If you currently use the Pay-As-You-Go Plan, you don't have to do anything.  You'll just use the new [IBM Quantum Platform](https://quantum.cloud.ibm.com/) interface.
 * If you currently use the Lite Plan (deprecated), you can switch to [using simulators locally](https://quantum.cloud.ibm.com/docs/migration-guides/local-simulators). Optionally, you can [create instances in the Open Plan,](#onboard) which lets you run jobs on quantum hardware.
 
 <Admonition type="important">
