Updates from comments

--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "Dynamic circuits are powerful tools that let us measure qubits in the middle of a quantum circuit execution and then perform classical logic operations within the circuit, based on the outcome of those mid-circuit measurements.  This process is also known as _classical feedforward_. While we are still in the early days of understanding how best to take advantage of dynamic circuits, the quantum research community has already identified a number of use cases, such as the following:\n",
     "\n",
-    "* Efficient quantum state preparation, such as [W-state](https://arxiv.org/abs/2412.07969) and [MPS state](https://arxiv.org/abs/2404.16083)\n",
+    "* Efficient quantum state preparation, such as [W-state](https://arxiv.org/abs/2412.07969) (for more information about W-state, see also [\"State preparation by shallow circuits using feed forward\"](https://arxiv.org/abs/2307.14840)) and [MPS state](https://arxiv.org/abs/2404.16083)\n",
     "* [Efficient long-range entanglement](https://journals.aps.org/prxquantum/abstract/10.1103/PRXQuantum.5.030339) between qubits on the same chip by using shallow circuits\n",
     "* Efficient [sampling of IQP-like circuits](https://arxiv.org/pdf/2505.04705)\n",
     "\n",
@@ -54,9 +54,9 @@
    "id": "0767b203-ad69-428f-b8c1-50ceab758b35",
    "metadata": {},
    "source": [
-    "## If statement\n",
+    "## `if` statement\n",
     "\n",
-    "The if statement is used to conditionally perform operations based on the value of a classical bit or register.\n",
+    "The `if` statement is used to conditionally perform operations based on the value of a classical bit or register.\n",
     "\n",
     "In the example below, we apply a Hadamard gate to a qubit and measure it. If the result is 1, then we apply an X gate on the qubit, which has the effect of flipping it back to the 0 state. We then measure the qubit again. The resulting measurement outcome should be 0 with 100% probability."
    ]
@@ -102,7 +102,7 @@
    "id": "fdc99e4d-fcd0-4397-b6da-2e36a51f90a8",
    "metadata": {},
    "source": [
-    "The `with` statement can be given an assignment target which is itself a context manager that can be stored and subsequently used to create an else block, which is executed whenever the contents of the if block are *not* executed.\n",
+    "The `with` statement can be given an assignment target which is itself a context manager that can be stored and subsequently used to create an else block, which is executed whenever the contents of the `if` block are *not* executed.\n",
     "\n",
     "In the example below, we initialize registers with two qubits and two classical bits. We apply a Hadamard gate to the first qubit and measure it. If the result is 1, then we apply a Hadamard gate on the second qubit; otherwise, we apply an X gate on the second qubit. Finally, we measure the second qubit as well."
    ]
@@ -151,7 +151,7 @@
    "source": [
     "In addition to conditioning on a single classical bit, it's also possible to condition on the value of a classical register composed of multiple bits.\n",
     "\n",
-    "In the example below, we apply Hadamard gates to two qubits and measure them. If the result is `01`, that is, the first qubit is 1 and the second qubit is 0, then we apply an X gate to a third qubit. Finally, we measure the third qubit. Note that for clarity, we chose to specify the state of the third classical bit, which is 0, in the if condition. In the circuit drawing, the condition is indicated by the circles on the classical bits being conditioned on. A black circle indicates conditioning on 1, while a white circle indicates conditioning on 0."
+    "In the example below, we apply Hadamard gates to two qubits and measure them. If the result is `01`, that is, the first qubit is 1 and the second qubit is 0, then we apply an X gate to a third qubit. Finally, we measure the third qubit. Note that for clarity, we chose to specify the state of the third classical bit, which is 0, in the `if` condition. In the circuit drawing, the condition is indicated by the circles on the classical bits being conditioned on. A black circle indicates conditioning on 1, while a white circle indicates conditioning on 0."
    ]
   },
   {
