--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -64,7 +64,7 @@ expectation values of observables corresponding to physical quantities or cost f
 * [Native gates and operations](./native-gates)
 * [Dynamic repetition rate execution](./repetition-rate-execution)
 * [Retired QPUs](./retired-qpus)
-* [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations)
+* [Hardware considerations and limitations](./dynamic-circuits-considerations)
 * [Instances](./instances)
 * [Fair-share scheduler](./fair-share-scheduler)
 * [Manage cost](./manage-cost)
