--- a/docs/tutorials/global-data-quantum-optimizer.ipynb
+++ b/docs/tutorials/global-data-quantum-optimizer.ipynb
@@ -367,7 +367,7 @@
    "id": "0c248fb7-0605-4456-a5ac-ced65b7593e7",
    "metadata": {},
    "source": [
-    "In this section, we extract and display the solution with the lowest objective cost from the optimization results. Along with identifying the optimal state (investment trajectory), we also present key metrics associated with this solution, including the restriction deviation, Sharpe ratio, and  investment return."
+    "In this section, we extract and display the solution with the lowest objective cost from the optimization results. Along with the minimum objective cost, we also present key metrics associated with the associated solution, including the restriction deviation, Sharpe ratio, and  investment return"
    ]
   },
   {
@@ -434,7 +434,6 @@
      "text": [
       "Minimum Objective Cost Found: -3.67\n",
       "Best Solution:\n",
-      "  - State: [0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0]\n",
       "  - Restriction Deviation: 40.0%\n",
       "  - Sharpe Ratio: 14.54\n",
       "  - Return: 0.28\n"
@@ -459,7 +458,6 @@
     "\n",
     "# Display the results associated with the best solution\n",
     "print(\"Best Solution:\")\n",
-    "print(f\"  - State: {best_row['states']}\")\n",
     "print(f\"  - Restriction Deviation: {best_row['rest_breaches']}%\")\n",
     "print(f\"  - Sharpe Ratio: {best_row['sharpe_ratios']:.2f}\")\n",
     "print(f\"  - Return: {best_row['returns']:.2f}\")"
@@ -654,7 +652,7 @@
  "metadata": {
   "description": "Solve a utility scale dynamic optimization problem using the Global Data Quantum's Quantum Portfolio Optimizer.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -668,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.7"
   },
   "title": "Quantum Portfolio Optimizer - A Qiskit Function by Global Data Quantum"
  },
