--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -61,7 +61,7 @@ This section summarizes the recent enhancements and new features for the new [IB
 - Instance limits: Individuals can view [available time and usage,](https://quantum.cloud.ibm.com/instances) which displays alerts when approaching limits.
 - Administrator permissions: Administrators can view overall usage, cycle period, and remaining time per plan in the Instances page.
 - Search: Search is now integrated and available for filtering documentation content, including guides and API references.
-- Billing: Standard (Pay-As-You-Go) users can find a link to billing by clicking the overflow menu for each instance on the [Instances](https://quantum.cloud.ibm.com/instances) page.
+- Billing: Pay-As-You-Go users can find a link to billing by clicking the overflow menu for each instance on the [Instances](https://quantum.cloud.ibm.com/instances) page.
 - New sign-in option: Sign-in with Google is now available on the [sign-in page.](https://quantum.cloud.ibm.com/signin)
 - Bug fixes:
   - Addressed failed batch sessions for Open Plan users.
@@ -84,7 +84,7 @@ This section summarizes the recent enhancements and new features for the new [IB
 
 **27 March 2025**
 
-- **Cost limits for Standard (Pay-As-You-Go) Plan** - Standard Plan users with sufficient access can now view and edit [maximum cost limits](/docs/guides/manage-cost#cost-limit) for their instances.
+- **Cost limits for Pay-As-You-Go Plan** - Pay-As-You-Go Plan users with sufficient access can now view and edit [maximum cost limits](/docs/guides/manage-cost#cost-limit) for their instances.
 
 - **Job management updates** - Now only administrators can delete workloads created by other users in an account, and collaborators will only be able to delete their own workloads.
 
