--- a/docs/guides/global-data-quantum-optimizer.ipynb
+++ b/docs/guides/global-data-quantum-optimizer.ipynb
@@ -389,7 +389,7 @@
     "\n",
     "The function returns two dictionaries: `\"result\"` dictionary, containing the best optimization results, including the optimal solution and its associated minimum objective cost; and `\"metadata\"`, with data from all results obtained during the optimization process, along with their respective metrics.\n",
     "\n",
-    "The first dictionary focuses on the best-performing solution, while the second provides detailed information about all solutions, including, objective costs, and other relevant metrics.\n",
+    "The first dictionary focuses on the best-performing solution, while the second provides detailed information about all solutions, including objective costs and other relevant metrics.\n",
     "\n",
     "## Output dictionaries:\n",
     "\n",
@@ -776,7 +776,7 @@
    "source": [
     "Afterwards, using the metadata, you can access the results of all the sampled strategies. You can thereby further analyze the alternative trajectories returned by the optimizer. To do this, read the dictionary stored in `dpo_result['metadata']['all_samples_metrics']`, which contains not only additional information about the optimal strategy, but also details of the other candidate strategies evaluated during the optimization.\n",
     "\n",
-    "The following example shows how to read this information using `pandas` to extract key metrics associated with the optimal strategy. These include, Restriction Deviation, Sharpe Ratio, and the corresponding investment return."
+    "The following example shows how to read this information using `pandas` to extract key metrics associated with the optimal strategy. These include Restriction Deviation, Sharpe Ratio, and the corresponding investment return."
    ]
   },
   {
