--- a/docs/guides/global-data-quantum-optimizer.ipynb
+++ b/docs/guides/global-data-quantum-optimizer.ipynb
@@ -432,7 +432,7 @@
     "| sharpe_ratios           | list[float]    | Risk-adjusted performance (Sharpe ratio) for each investment trajectory. Aligned by index.                      | `[1.1, 0.7]`                 |\n",
     "| returns                 | list[float]    | Expected return for each investment trajectory. Aligned by index.                                               | `[0.15, 0.10]`               |\n",
     "| rest_breaches           | list[float]    | Maximum constraint deviation within each investment trajectory. Aligned by index.                               | `[0.0, 0.25]`                |\n",
-    "| transaction_costs       | list[float]    | Estimated transaction cost associated with each investment trajectory. Aligned by index.                        | `[0.01, 0.02]`               |\n"
+    "| transaction_costs       | list[float]    | Estimated transaction cost associated with each investment trajectory. Aligned by index.                        | `[0.01, 0.02]`               |"
    ]
   },
   {
@@ -933,7 +933,7 @@
  "metadata": {
   "description": "A Qiskit Function to solve Dynamic Portfolio Optimization problems using a fine-tuned implementation of the VQE.",
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -947,7 +947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3"
   },
   "title": "Quantum Portfolio Optimizer - A Qiskit Function by Global Data Quantum"
  },
