--- a/docs/tutorials/global-data-quantum-optimizer.ipynb
+++ b/docs/tutorials/global-data-quantum-optimizer.ipynb
@@ -652,7 +652,7 @@
  "metadata": {
   "description": "Solve a utility scale dynamic optimization problem using the Global Data Quantum's Quantum Portfolio Optimizer.",
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -666,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3"
   },
   "title": "Quantum Portfolio Optimizer - A Qiskit Function by Global Data Quantum"
  },
